PROJ2/E-2.5.106-Game2048_main/wdir_msg/compile.err

./PlayerIO.java:20: error: empty character literal
        char read='';
                  ^
1 error


